force-app/main/default/objects/Jira_Push_Request__e/Jira_Push_Request__e.object-meta.xml
<CustomObject>
    <label>Jira Push Request</label>
    <pluralLabel>Jira Push Requests</pluralLabel>
</CustomObject>