force-app/main/default/objects/Jira_Push_Request__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>Either Create or Update.</description>
    <label>Change Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>