force-app/main/default/objects/Jira_Push_Request__e/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>UTC timestamp set when the event was constructed.</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>