force-app/main/default/objects/Jira_Push_Request__e/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Salesforce 18-character Id of the changed record.</description>
    <label>Source Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>