force-app/main/default/objects/Jira_Push_Request__e/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API name of the SObject whose change triggered this event (e.g. Opportunity, Case).</description>
    <label>Source Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unicode>false</unicode>
</CustomField>