force-app/main/default/objects/Jira_Push_Request__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description
  >Originating Apex Request Id (System.Request.getCurrent().getRequestId()), for cross-system traceability.</description>
    <label>Transaction Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>